# development_guidelines

./: Makefile  README.md  mkdocs.yml  observability.md  pyproject.toml
src/: bibliography.md  bibliography.rst  components_index.rst  conf.py  documentation.rst  feature_flags.md  identifiers.md  index.md  index.rst  languages_index.rst  versioning_index.rst
src/activities/: architecture.md  automated_validation.md  code_review.md  documentation.md  hiring.md  meetings.md  static_analysis.md  team_metrics.md  ui_design.md
src/activities/versioning/: commit_messages.md  releases.md
src/architecture/: documentation.md  frontends.md  specification.md  system.md  third_parties.md
src/architecture/frontend/: microservices.md
src/architecture/software/: backend.md  frontends.md  generic.md
src/architecture/system/: generic.md  (+1 more)
src/components/: command_line.rst  index.rst  rest_api.rst
src/features/: accessibility.md  authentication.md  authorization.md  automated_validation.md  documentation.md  event_system.md  feature_flags.md  internationalization.md  logging.md  testing.md  translations.md
src/infrastructure/: databases.md
src/languages/: bash.md  bash.rst  css.md  dockerfile.md  dockerfile.rst  go.md  index.rst  python.md  python.rst  rust.md  rust.rst  terraform.md
src/services/: application_discovery.md  event_system.md  feature_flags.md  webhooks.md
src/software_qualities/: accessibility.md  index.md  security.md
src/transport_layers/: command_line.md  graphql.md  rest_api.md
src/versioning/: commit_messages.md  commit_messages.rst  index.rst
(+8 files in other folders)
