[tool.poetry]
name = "development_guidelines"
version = "0.1.0"
description = ""
authors = ["Kevin Tran <kevin_tran@live.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "*"
mkdocs = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
